cnd.highlight/test/unit/data/org/netbeans/modules/cnd/highlight/error/MultiProjectsErrorHighlightingTest/forth/forth.cpp

#include "lib_header.h"

using namespace ns210384;

void forth210384 () {
    void foo210384();
}

